2001-08-19  Christian Stimming  <stimming@tuhh.de>

	* po/gnc-glossary.txt, po/glossary/gnc-glossary.txt,
	po/glossary/txt-to-pot.sh, po/glossary/de.po: Moved from the
	concept of one big ascii table to the concept of one po file for
	each translation of the glossary. Hence, created this
	subdirectory.

2001-08-18  Robert Graham Merkel  <rgmerk@mira.net>

	* src/engine/FreqSpec.c: i18n xaccFreqSpecGetFreqStr.

	* src/gnome/dialog-sxsincelast.c: fix bug in close callback.

2001-08-17  James LewisMoss  <jimdres@mindspring.com>

	* src/gnc-module/gnc-module.c (gnc_module_system_setup_load_path):
	add in void for empty argument list.

	* src/gnc-module/Makefile.am (libgw_gnc_module_la_SOURCES): add
	-lgncmodule to link link and libgncmodule.la to dependencies.

	* src/register/register-gnome/Makefile.am
	(libgncmod_register_gnome_la_LDFLAGS): add GNOMEUILIBS to module
	link line.

	* src/guile/Makefile.am: remove file-utils.[ch] &
	argv-list-encoders.[ch] 

	* src/gnome/Makefile.am (SUBDIRS): add file-utils.[ch] &
	argv-list-encoders.[ch] 

2001-08-16  Bill Gribble  <grib@billgribble.com>

	* move report system into gnc-modules. This required a new
	module of application framework stuff, src/app-utils.

	* src/report/report-system/: the report-html-generation code
	and the various report utilities and infrastructure

	* src/report/standard-reports/: non-locale-specific financial
	reports

	* src/report/utility-reports: non-financial reports

	* src/report/locale-specific: reports that only apply to specific
	locales. 

	* src/report/stylesheet: report style sheet definitions

2001-08-16  James LewisMoss  <jimdres@mindspring.com>

	* src/guile/argv-list-converters.c (print_argv): remove unused
	function. 

2001-08-16  Robert Graham Merkel  <rgmerk@mira.net>

	* src/engine/FreqSpec.c: Take out day and month name arrays - use 
	strftime instead.  i18n Date formatting.  Replace magic numbers.

	* src/gnome/glade/sched-xact.glade: Add "select all" and "unselect all"